--- a/EntregaFinal/src/views/productos.hbs
+++ b/EntregaFinal/src/views/productos.hbs
@@ -13,6 +13,5 @@
     <div class="containProductos" id="containProducts">
         
     </div>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/productos.js"></script>
+  <script src="./js/productos.js"></script>
 </div>
