--- a/EntregaFinal/src/views/index.hbs
+++ b/EntregaFinal/src/views/index.hbs
@@ -8,7 +8,7 @@
    
   </div>
   <div class="containProductos" id="containProducts">
-    {{#each products}}
+    {{#each productResult.payload }}
       <div class="producto">
         <h2> {{this.nombre}} </h2>
         <div>
