--- a/EntregaFinal/src/views/index.hbs
+++ b/EntregaFinal/src/views/index.hbs
@@ -7,20 +7,28 @@
     </div>
    
   </div>
-  <div class="containProductos" id="containProducts">
-    {{#each productResult.payload }}
-      <div class="producto">
-        <h2> {{this.nombre}} </h2>
-        <div>
-          <p> Bodega: {{this.bodega}} </p>
-          <p> Tipo: {{this.tipo}} </p>
-          <p> Variedad: {{this.variedad}} </p>
-          <p> Año: {{this.año}} </p>
-        </div>
-        <h3> Precio: ${{this.precio}},00 </h3>
-        <button id="addToCartBtn" data-id="{{this._id}}" data-name="{{this.nombre}}" data-price="{{this.precio}}">Agregar al carrito</button>
+  <div class="containerProducts">
+    {{log prevLink}}
+    <a class="buttonPage" href="{{ productResult.prevLink }}"><</a>
+    
+      <div class="containProducts" id="containProducts">
+        {{#each productResult.payload }}
+          <div class="producto">
+            <h2> {{this.nombre}} </h2>
+            <div>
+              <p> Bodega: {{this.bodega}} </p>
+              <p> Tipo: {{this.tipo}} </p>
+              <p> Variedad: {{this.variedad}} </p>
+              <p> Año: {{this.año}} </p>
+            </div>
+            <h3> Precio: ${{this.precio}},00 </h3>
+            <button id="addToCartBtn" data-id="{{this._id}}" data-name="{{this.nombre}}" data-price="{{this.precio}}">Agregar al carrito</button>
+          </div>
+        {{/each}}
       </div>
-    {{/each}}
+    <a class="buttonPage" href="{{ productResult.nextLink }}">></a>
+    
+    
   </div>
   <script src="/js/main.js"></script>
 
