--- a/EntregaFinal/src/public/css/style.css
+++ b/EntregaFinal/src/public/css/style.css
@@ -20,6 +20,7 @@
 .title{
     font-size: 72px;
 
+
 }
 
 .link{
@@ -30,12 +31,19 @@
     color: black;
 }
 
-.containProductos{
+.containerProducts{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.containProducts{
     margin: 100px auto 100px;
     width: 81%;
     display: grid;
     justify-content: space-between;
-    grid-template-columns: 20% 20% 20% 20%;
+    grid-template-columns: 28% 28% 28%;
     grid-template-rows: auto;
     height: 100%;
     box-sizing: border-box;
@@ -44,59 +52,18 @@
 
 .containerIndex{
     display: flex;
-
-}
-
-.chatContainer{
-    width: 40vw;
-    display: flex;
     justify-content: center;
-    
     align-items: center;
 }
 
-.chat{
-    width: 90%;
-    height: 90%;
-    flex-direction: column; 
-    border: 2px solid black;
+.buttonPage{
+    width: 100px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
-}
-
-.chatContent{
-    width: 90%;
-    height: 70%;
-    border: 2px solid black;
-    gap: 5px;
-    padding: 3px;
-    box-sizing: border-box;
-    overflow-y: scroll;
-}
-
-.globeChat{
-    width: auto;
-    height: auto;
-    max-width: 50%;
-    flex-direction: column;
-    gap: 5px;
-    padding: 3px;
-    border: 1px solid black;
-    border-radius: 10px;
-    margin-top: 4px;
-    margin-bottom: 4px;
-}
-
-.containerTextChat{
-    width: 90%;
-    height: 10%;
-}
-
-.textChat{
-    width: 90%;
-    height: 90%;
+    font-size: 60px;
+    text-decoration: none;
 }
 
 .producto{
@@ -109,3 +76,4 @@
     flex-direction: column;
     gap: 30px;
 }
+
