--- a/EntregaFinal/src/public/css/style.css
+++ b/EntregaFinal/src/public/css/style.css
@@ -6,12 +6,13 @@
 
 .layout{
     width: 80%;
+    height: 80vh;
     margin: 0 auto;
 }
 
 .titleContainer{
     width: 100%;
-    height: 200px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,10 +37,13 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    height: 100%;
 }
 
 .containProducts{
-    margin: 100px auto 100px;
+    margin: 0 auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
     width: 81%;
     display: grid;
     justify-content: space-between;
@@ -54,6 +58,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 20vh;
+    flex-direction: column;
 }
 
 .buttonPage{
@@ -69,7 +75,7 @@
 .producto{
     width: 100%;
     border: 1px solid black;
-    height: 350px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,3 +83,20 @@
     gap: 30px;
 }
 
+.numberPage{
+    height: 50px;
+    width: 200px;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+
+}
+
+.containerControlPages{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
