--- a/EntregaFinal/src/public/css/food.css
+++ b/EntregaFinal/src/public/css/food.css
@@ -4,39 +4,106 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.container{
+.layout{
+    width: 80%;
+    height: 80vh;
+    margin: 0 auto;
+}
+
+.titleContainer{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
-}
-
-.form{
-    display: flex;
-    justify-content: space-around;
     align-items: center;
-    width: 200px;
-    height: 500px;
-    flex-direction: column;
 }
 
-.containProductos{
-    margin: 100px auto 100px;
+.title{
+    font-size: 72px;
+
+
+}
+
+.link{
+    border: 1px solid black;
+    padding: 30px;
+    font-size: 20px;
+    text-decoration: none!important;
+    color: black;
+}
+
+.containerProducts{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.containProducts{
+    margin: 0 auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
     width: 81%;
     display: grid;
     justify-content: space-between;
-    grid-template-columns: 20% 20% 20% 20%;
+    grid-template-columns: 28% 28% 28%;
     grid-template-rows: auto;
     height: 100%;
     box-sizing: border-box;
     grid-row-gap: 50px;
 }
 
+.containerIndex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    flex-direction: column;
+}
+
+.buttonPage{
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 60px;
+    text-decoration: none;
+}
+
 .producto{
     width: 100%;
     border: 1px solid black;
-    height: 350px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 30px;
+}
+
+.numberPage{
+    height: 50px;
+    width: 200px;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.containerControlPages{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.containerOptions{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
 }
