--- a/EntregaFinal/src/views/index.hbs
+++ b/EntregaFinal/src/views/index.hbs
@@ -3,7 +3,10 @@
     <div>
       <div class="titleContainer">
         <a href="/" class="title">Bienvenido a El Bodegon!</a>
+        
+        <div class="cartContainer"><a href="/cart/1">Ver Carrito</a></div>
       </div>
+      
     </div>
     <div class="titleContainer">
       <a href="/products/?page=1&limit=3" class="btnprod">Ver Productos</a>
