--- a/EntregaFinal/src/views/singleProduct.hbs
+++ b/EntregaFinal/src/views/singleProduct.hbs
@@ -3,6 +3,7 @@
     <div>
       <div class="titleContainer">
         <a href="/" class="title">Bienvenido a El Bodegon!</a>
+        <div class="cartContainer"><a href="/cart/1">Ver Carrito</a></div>
       </div>
     </div>
     <div>
